crates/query-engine/translation/tests/snapshots/tests__select_composite_column_simple.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SET
  TRANSACTION ISOLATION LEVEL READ COMMITTED;

SET
  TRANSACTION READ ONLY;

WITH "%1_NATIVE_QUERY_address_identity_function" AS (
  SELECT
    jsonb_populate_record(cast(null as person_address), $1) as result
)
SELECT
  coalesce(json_agg(row_to_json("%2_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%3_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%0_address_identity_function"."result" AS "result"
            FROM
              "%1_NATIVE_QUERY_address_identity_function" AS "%0_address_identity_function"
          ) AS "%3_rows"
      ) AS "%3_rows"
  ) AS "%2_universe";

{
    1: Value(
        Object {
            "address_line_1": String("Somstreet 159"),
            "address_line_2": String("Second door to the right"),
        },
    ),
}
