crates/query-engine/translation/tests/snapshots/tests__select_nested_column_simple.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
WITH "%1_NATIVE_QUERY_address_identity_function" AS (
  WITH "%11_NATIVE_QUERY_address_identity_function" AS (
    SELECT
      jsonb_populate_record(cast(null as "public"."person_address"), $1) as result
  )
  SELECT
    *
  FROM
    "%11_NATIVE_QUERY_address_identity_function" AS "%12_NATIVE_QUERY_address_identity_function"
),
"%2_address_identity_function" AS (
  SELECT
    "%0_address_identity_function".*
  FROM
    "%1_NATIVE_QUERY_address_identity_function" AS "%0_address_identity_function"
)
SELECT
  coalesce(json_agg(row_to_json("%7_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%8_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%6_nested_fields_collect"."collected" AS "result"
            FROM
              "%2_address_identity_function" AS "%3_address_identity_function"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  row_to_json("%4_nested_fields") AS "collected"
                FROM
                  (
                    SELECT
                      "%5_nested_field_binding"."address_line_1" AS "the_first_line_of_the_address"
                    FROM
                      (
                        SELECT
                          ("%3_address_identity_function"."result").*
                      ) AS "%5_nested_field_binding"
                  ) AS "%4_nested_fields"
              ) AS "%6_nested_fields_collect" ON ('true')
          ) AS "%8_rows"
      ) AS "%8_rows"
  ) AS "%7_universe";

{
    1: Value(
        Object {
            "address_line_1": String("Somstreet 159"),
            "address_line_2": String("Second door to the right"),
        },
    ),
}
