crates/query-engine/translation/tests/snapshots/tests__select_where_array_relationship.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SET
  TRANSACTION ISOLATION LEVEL READ COMMITTED;

SET
  TRANSACTION READ ONLY;

SELECT
  coalesce(json_agg(row_to_json("%6_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%7_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%0_Artist"."Name" AS "title",
              "%1_RELATIONSHIP_albums"."albums" AS "albums"
            FROM
              "public"."Artist" AS "%0_Artist"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  row_to_json("%1_RELATIONSHIP_albums") AS "albums"
                FROM
                  (
                    SELECT
                      *
                    FROM
                      (
                        SELECT
                          coalesce(json_agg(row_to_json("%3_rows")), '[]') AS "rows"
                        FROM
                          (
                            SELECT
                              "%2_Album"."Title" AS "title"
                            FROM
                              "public"."Album" AS "%2_Album"
                            WHERE
                              ("%0_Artist"."ArtistId" = "%2_Album"."ArtistId")
                            ORDER BY
                              "%2_Album"."AlbumId" ASC
                          ) AS "%3_rows"
                      ) AS "%3_rows"
                  ) AS "%1_RELATIONSHIP_albums"
              ) AS "%1_RELATIONSHIP_albums" ON ('true')
              INNER JOIN LATERAL (
                SELECT
                  *
                FROM
                  "public"."Album" AS "%5_BOOLEXP_Album"
                WHERE
                  (
                    "%0_Artist"."ArtistId" = "%5_BOOLEXP_Album"."ArtistId"
                  )
              ) AS "%5_BOOLEXP_Album" ON ('true')
            WHERE
              (
                "%5_BOOLEXP_Album"."Title" LIKE cast($1 as varchar)
              )
            ORDER BY
              "%0_Artist"."ArtistId" ASC
          ) AS "%7_rows"
      ) AS "%7_rows"
  ) AS "%6_universe";

{
    1: String(
        "Supernatural",
    ),
}
