crates/query-engine/translation/tests/snapshots/tests__select_where_large_or.snap
---
source: crates/query-engine/translation/tests/tests.rs
assertion_line: 339
expression: result
snapshot_kind: text
---
SELECT
  coalesce(json_agg(row_to_json("%2_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%3_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%1_Album"."AlbumId" AS "AlbumId"
            FROM
              (
                SELECT
                  "%0_Album".*
                FROM
                  "public"."Album" AS "%0_Album"
                WHERE
                  (
                    "%0_Album"."Title" IN (
                      cast($1 as "pg_catalog"."varchar"),
                      cast($2 as "pg_catalog"."varchar"),
                      cast($3 as "pg_catalog"."varchar"),
                      cast($4 as "pg_catalog"."varchar"),
                      cast($5 as "pg_catalog"."varchar"),
                      cast($6 as "pg_catalog"."varchar"),
                      cast($7 as "pg_catalog"."varchar"),
                      cast($8 as "pg_catalog"."varchar"),
                      cast($9 as "pg_catalog"."varchar"),
                      cast($10 as "pg_catalog"."varchar")
                    )
                  )
              ) AS "%1_Album"
          ) AS "%3_rows"
      ) AS "%3_rows"
  ) AS "%2_universe";

{
    1: String(
        "Album1",
    ),
    2: String(
        "Album2",
    ),
    3: String(
        "Album3",
    ),
    4: String(
        "Album4",
    ),
    5: String(
        "Album5",
    ),
    6: String(
        "Album6",
    ),
    7: String(
        "Album7",
    ),
    8: String(
        "Album8",
    ),
    9: String(
        "Album9",
    ),
    10: String(
        "Album10",
    ),
}
